[project]
name = "tilt-pi"
version = "0.1.0"
description = "A Python client for interacting with the Tilt Pi API"
authors = [
    {name = "Michael Heyman",email = "michaelheyman@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
